# -

./: .gitignore  LICENSE  README.md  pyproject.toml
data/datasets/TimeIT/step_localization/ikea_asm_ext/: instruct_action_0.4k_ikea_asm_ext_new.json
debug/: dev.ipynb
demo/: cli_demo.py
docs/: Design.md  InternBLIP2.md  QFormer.md  ViT.md  VideoQFormer.md
src/craft_buddy/: train.py
src/craft_buddy/dataset/: __init__.py  video_instruct_dataset.py
src/craft_buddy/models/: llm.py  qformer.py  vit.py  vlm.py  vqformer.py
src/craft_buddy/utils/: conversation.py
tests/models/: test_vit.py
